--- a/assets/layout.css
+++ b/assets/layout.css
@@ -1,5 +1,5 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
+html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}figure{margin:0;padding:0;}
 
 /* =studio16b.com ======================================================= */
 
@@ -11,11 +11,308 @@ body, html {
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
 }
+.stage {
+  margin: 0 1rem;
+}
+img {
+  max-width: 100%; 
+}
+
+/* micro-clearfix: http://nicolasgallagher.com/micro-clearfix-hack/ */
+.cf:before,
+.cf:after {
+  content: " "; /* 1 */
+  display: table; /* 2 */
+}
+
+.cf:after {
+  clear: both;
+}
 
 /* =nav           ======================================================= */
-nav.languages {
-  background-color: #FF6150;
-}
-nav.languages ul {
+nav.languages {  }
+nav.languages ul {margin:0;padding:0;text-align:right;}
+nav.languages li {font-size:.4rem;display:inline-grid;padding:0 0 0 1em}
+nav.languages a {color:#646464;text-decoration:none;text-transform:uppercase;}
+
+/* .main-nav {background-color: #FF6150;} */
+/* .main-nav ul {margin:0;padding:0;} */
+/* .main-nav li {font-size:.7rem;display:inline-grid;padding:0 1rem 0 0;} */
+/* .main-nav a {color:#134E6F;font-weight:bold;text-decoration:none;text-transform:uppercase;} */
+
+.site-nav ul {
   margin: 0;
+  padding: 1rem 0;
 }
+
+.site-nav li {
+  display: inline-grid;
+  font-size: .8rem;
+  padding: 0 .5rem 0 0;
+}
+
+.site-nav a {
+  color: #646464;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.social {
+  padding: 1rem 0 ;
+}
+.social h3 {
+  font-size: 1rem;
+  color: #134E6F;
+  margin-bottom: 0;
+}
+.social ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.social li.linkedin {
+  background: url(./icon-linkedin-dark.svg) 0 50% no-repeat;
+  background-size: 32px 32px;
+  height: 32px;
+  padding: 10px 0 0 42px;
+}
+
+/* =hamburger navigation (css-only)
+    ======================================================================= */
+
+/*  With many thanks taken from:
+    https://codepen.io/mutedblues/pen/MmPNPG
+    */
+
+.main-nav {
+  width: 100%;
+  z-index: 3;
+}
+
+.main-nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #fff;
+}
+
+.main-nav li {
+  font-size: .8rem;
+  text-transform: uppercase;
+}
+
+.main-nav li a {
+  display: block;
+  color: #134E6F;
+  padding: .25rem .25rem .5rem .25rem;
+  text-decoration: none;
+}
+
+.main-nav li a:hover,
+.main-nav .menu-btn:hover {
+}
+
+.main-nav .logo {
+  display: block;
+  float: left;
+  font-size: 2em;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.main-nav .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+.main-nav .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  /* padding: .20px 5px 20px 20px;*/
+  padding: 2rem 0 1rem 0;
+  position: relative;
+  user-select: none;
+}
+
+.main-nav .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.main-nav .menu-icon .navicon:before,
+.main-nav .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.main-nav .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.main-nav .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.main-nav .menu-btn {
+  display: none;
+}
+
+.main-nav .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.main-nav .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.main-nav .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.main-nav .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.main-nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.main-nav .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* Only hamburger menu relevant items go into this media query */
+@media (min-width: 48em) {
+  .main-nav li {
+    float: left;
+  }
+  .main-nav li a {
+    /*padding: 20px 30px;*/
+    padding: 0 2rem 0 0;
+  }
+  .main-nav .menu {
+    clear: both;
+    /*float: right;*/
+    max-height: none;
+  }
+  .main-nav .menu-icon {
+    display: none;
+  }
+}
+
+/* =header
+   ====================================================================== */
+header {
+  /*background-color: #FF6150;*/
+  /* border-bottom: .5rem solid #FFA822; */
+  /* padding: 7rem 0 5rem; */
+  /* padding: 2rem 0 1rem; */
+}
+
+header h1 {
+  color: #134E6F;
+  font-family: georgia, serif;
+  font-size: 1.4rem;
+  font-weight: normal;
+  line-height: 1.5;
+  margin-bottom: .5rem;
+}
+
+.wallpaper {
+  padding: .5rem 0 0 0;
+}
+
+.commitment {
+  padding: 1rem 0 0 0;
+}
+
+#logo {
+  margin: 0 0 0 0;
+  padding: 1.5rem 0;
+  float: left;
+  width: 80%;
+}
+#logo img {
+  width: 75%;
+}
+
+/* =main
+   ====================================================================== */
+main {
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+  padding: .5rem 0 2rem 0;
+}
+
+/* =footer
+   ====================================================================== */
+footer {
+  background-color: #DEE0E6;
+  /* border-top: .5rem solid #1AC0C6; */
+  padding: 2rem 0 4rem 0;
+}
+footer address {
+  font-style: normal;
+}
+footer address strong {
+  color: #134E6F;
+}
+footer .sticker img {
+  width: 120px;
+  padding: 0 1rem 0 0;
+}
+footer .direct-contact {
+  padding-top: 2rem;
+}
+
+
+/* =screen
+   ====================================================================== */
+@media screen and (min-width: 48em) {
+  .stage {
+    margin: 0 auto;
+    width: 48rem;
+  }
+  .wallpaper {
+    padding: 1.5rem 0 0 0;
+  }
+  .wallpaper img {
+    width: 100%;
+  }
+  #logo {
+    margin: 3rem 0 1rem 0;
+  }
+  #logo img {
+    width: 50%;
+  }
+  header h1 {
+    font-size: 2rem;
+  }
+  .main-nav li {
+    display: inline-grid;
+  }
+  footer .sticker {
+    float: left;
+  }
+  footer .sticker img {
+    float:  left;
+    width: 120px;
+    padding: 0 1rem 0 0;
+  }
+  footer .direct-contact {
+    padding: 0;
+    float: left;
+  }
+}
+
