--- a/assets/layout.css
+++ b/assets/layout.css
@@ -27,6 +27,7 @@ header {
 }
 
 main {
+    border-top: var(--border-size) solid var(--color-darkblue);
     margin: 2rem 0;
 }
 
@@ -116,9 +117,29 @@ a {
     color: var(--color-darkblue);
 }
 
+/*! main content */
+h1 {
+    color: var(--color-darkblue);
+    font-size: 2.2rem;
+    font-weight: normal;
+}
+
+h2 {
+    color: var(--color-darkblue);
+}
+
+h3 {
+    color: var(--color-darkblue);
+    line-height: 1.5;
+    /*text-align: center;*/
+}
+
+a {
+    color: var(--color-darkblue);
+}
+
 /*! highlight */
 #highlight {
-    border-top: var(--border-size) solid var(--color-darkblue);
     background-color: var(--color-lightgrey);
 }
 
@@ -143,12 +164,6 @@ a {
 #intro {
     font-size: 1.2rem;
     color: var(--color-darkblue);
-}
-
-h3 {
-    color: var(--color-darkblue);
-    line-height: 1.5;
-    /*text-align: center;*/
 }
 
 footer {
@@ -229,7 +244,7 @@ footer h3 {
 @media screen and (min-width: 28em) {
 
     /*! header */
-    header { border-top: var(--border-size) solid #c96; }
+    /* header { border-top: var(--border-size) solid #c96; } */
     #logo { padding: 1.7rem 0 0 0;margin: 0;float:left;width:30%; }
     #logo img { width: 94%; }
     #nav-main { text-align: right;margin: 0;padding: 1.8rem 0 0 0; }
