--- a/assets/layout.css
+++ b/assets/layout.css
@@ -19,7 +19,7 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
 
 /*! main elements */
 html, body {
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     line-height: 1.5;
 }
 
@@ -269,7 +269,7 @@ footer h3 {
 }
 
 @media screen and (min-width: 48em) {
-    body, html { font-size: 1.3rem; }
+    body, html { font-size: 1.2rem; }
     .stage { width: 36rem; }
     #intro { }
 }
