--- a/assets/layout.css
+++ b/assets/layout.css
@@ -46,7 +46,7 @@ header {
 }
 
 main {
-    margin: 2rem 0;
+    margin: 2rem 0 4rem 0;
 }
 
 figure {
@@ -105,7 +105,7 @@ a {
 /*! main navigation */
 #nav-main {
     font-size: .9rem;
-    margin: 1.5rem 0 0 0;
+    margin: 0 0 0 0;
     text-transform: uppercase;
     text-align: var(--main-align);
 }
@@ -137,7 +137,7 @@ a {
 
 #nav-main .language-icon img {
     position: relative;
-    top: .1rem;
+    top: .2rem;
     border-radius: .3rem;
 }
 
