--- a/assets/layout.css
+++ b/assets/layout.css
@@ -269,6 +269,19 @@ footer h3 {
     text-decoration: none;
 }
 
+#testimonials {
+
+}
+
+#testimonials figure {
+    float: left;
+    width: 30%;
+    margin-right: 2rem;
+}
+
+#testimonials article {
+}
+
 @media screen and (min-width: 28em) {
 
     /*! header */
